infra/k8s/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-guessr-frontend
  namespace: game-guessr
spec:
  selector:
    app: game-guessr-frontend
  ports:
  - port: 80
    targetPort: 80
