infra/k8s/base/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: game-guessr-frontend
  namespace: game-guessr
spec:
  parentRefs:
  - name: game-guessr-gke-gateway
    namespace: game-guessr
  rules:
  - backendRefs:
    - name: game-guessr-frontend
      port: 80
